# Clever-server

./: README.md
Clever-note-desktop/: .editorconfig  .gitignore  CMakeLists.txt  README.md
Clever-note-desktop/cpoet/: CMakeLists.txt
Clever-note-desktop/cpoet/core/: CMakeLists.txt
Clever-note-desktop/cpoet/core/inc/: constant.h  core.h  cpoet.h  cpoet.h.in  exception.h  log.h
Clever-note-desktop/cpoet/core/inc/xml/: xml_handle.h  xml_mapper.h  xml_parser.h
Clever-note-desktop/cpoet/core/src/: core.cpp  exception.cpp  log.cpp
Clever-note-desktop/cpoet/core/src/xml/: xml_handle.cpp  xml_mapper.cpp  xml_parser.cpp
Clever-note-desktop/cpoet/core/test/: CMakeLists.txt  xml_parser.cpp
Clever-note-desktop/cpoet/database/: CMakeLists.txt
Clever-note-desktop/cpoet/database/inc/core/: db_context_holder.h  sql_executor.h
Clever-note-desktop/cpoet/database/inc/criteria/: delete_criteria.h  insert_criteria.h  select_criteria.h  update_criteria.h
Clever-note-desktop/cpoet/database/inc/dialect/: dialect.h  dialect_context.h  dialect_factory.h  dialect_names.h  dialect_result.h
Clever-note-desktop/cpoet/database/inc/sqlite/: sqlite_dialect.h  sqlite_dialect_func.h  sqlite_dialect_handler.h  sqlite_keywords.h
Clever-note-desktop/cpoet/database/inc/wrapper/: delete_wrapper.h  group_wrppaer.h  having_wrapper.h  insert_wrapper.h  join_wrapper.h  order_types.h  order_wrapper.h  select_wrapper.h  sql_condition.h  sql_condition_heads.h  sql_condition_logic.h  sql_condition_region.h  sql_condition_types.h  sql_wrapper.h  sql_wrapper_types.h  sql_wrappers.h  update_wrapper.h  where_wrapper.h  wrapper_executor.h
Clever-note-desktop/cpoet/database/src/core/: db_context_holder.cpp  sql_executor.cpp
Clever-note-desktop/cpoet/database/src/criteria/: delete_criteria.cpp  insert_criteria.cpp  select_criteria.cpp  update_criteria.cpp
Clever-note-desktop/cpoet/database/src/dialect/: dialect_context.cpp  dialect_factory.cpp  dialect_result.cpp
Clever-note-desktop/cpoet/database/src/sqlite/: sqlite_dialect.cpp  sqlite_dialect_func.cpp  sqlite_dialect_handler.cpp
Clever-note-desktop/cpoet/database/src/wrapper/: delete_wrapper.cpp  insert_wrapper.cpp  select_wrapper.cpp  sql_condition.cpp  sql_wrappers.cpp  update_wrapper.cpp  wrapper_executor.cpp
Clever-note-desktop/cpoet/database/test/: CMakeLists.txt  db_context_holder.cpp  select_wrapper.cpp  sql_executor.cpp  test.db  wrapper_executor.cpp
Clever-note-desktop/cpoet/plugin/: CMakeLists.txt
Clever-note-desktop/cpoet/plugin/inc/: plugin.h  plugin_factory.h  plugin_func_symbol.h  plugin_function.h  plugin_manager.h  plugin_meta.h
Clever-note-desktop/cpoet/plugin/src/: plugin.cpp  plugin_factory.cpp  plugin_manager.cpp
Clever-note-desktop/cpoet/plugin/test/: CMakeLists.txt  library_load.cpp  plugin_factory.cpp
Clever-note-desktop/cpoet/theme/: CMakeLists.txt
Clever-note-desktop/cpoet/theme/inc/css/: css.h  css_handle.h  css_handle_func.h  css_parse.h
Clever-note-desktop/cpoet/theme/inc/scss/: scss.h
Clever-note-desktop/cpoet/theme/src/css/: css.cpp  css_handle.cpp  css_handle_func.cpp  css_parse.cpp
Clever-note-desktop/cpoet/theme/src/scss/: scss.cpp
Clever-note-desktop/cpoet/zlib/: CMakeLists.txt
Clever-note-desktop/cpoet/zlib/test/: CMakeLists.txt  zlib.cpp  zlib_out.cpp
Clever-note-desktop/desktop/: CMakeLists.txt
Clever-note-desktop/desktop/database/: CMakeLists.txt
Clever-note-desktop/desktop/database/inc/: notebook.h
Clever-note-desktop/desktop/database/src/: notebook.cpp
Clever-note-desktop/desktop/database/test/: CMakeLists.txt  notebook.cpp
Clever-note-desktop/desktop/editor/: CMakeLists.txt
Clever-note-desktop/desktop/editor/inc/: editor.h
Clever-note-desktop/desktop/editor/src/: editor.cpp
Clever-note-desktop/desktop/main/: CMakeLists.txt
Clever-note-desktop/desktop/main/inc/: mainwindow.h
Clever-note-desktop/desktop/main/src/: main.cpp  mainwindow.cpp
Clever-note-desktop/desktop/richtext/: CMakeLists.txt
Clever-note-desktop/desktop/richtext/inc/: richtext.h
Clever-note-desktop/desktop/richtext/src/: richtext.cpp
Clever-note-desktop/desktop/theme/: CMakeLists.txt
Clever-note-desktop/desktop/theme/inc/: constant.h  theme.h  theme_file.h  theme_item.h
Clever-note-desktop/desktop/theme/src/: theme.cpp  theme_file.cpp  theme_item.cpp
Clever-note-desktop/lang/: zh_CN.ts  zh_TW.ts
Clever-note-desktop/lib/: CMakeLists.txt
Clever-note-desktop/lib/zlib-1.2.11/: CMakeLists.txt
Clever-note-desktop/plugin/: CMakeLists.txt
Clever-note-desktop/plugin/github/: CMakeLists.txt
Clever-note-desktop/plugin/github/inc/: core.h  github.h
Clever-note-desktop/plugin/github/src/: github.cpp
Clever-note-desktop/theme/: README.md  default.theme.clr
Clever-note-desktop/theme/default/: default.xml  ext.css  index.scss
Clever-note-desktop/theme/default-black/: default-black.xml
Clever-note-server/: pom.xml
Clever-note-server/clever-adapter/: pom.xml
Clever-note-server/clever-adapter/clever-adapter-annotation/: pom.xml
Clever-note-server/clever-adapter/clever-adapter-cloud/: pom.xml
Clever-note-server/clever-adapter/clever-adapter-standalone/: pom.xml
Clever-note-server/clever-annotation/: pom.xml
Clever-note-server/clever-auth/: pom.xml
Clever-note-server/clever-cloud-gateway/: pom.xml
Clever-note-server/clever-core/: pom.xml
Clever-note-server/clever-modules/: pom.xml
Clever-note-server/clever-modules/clever-module-admin/: pom.xml
Clever-note-server/clever-modules/clever-module-cloud/: pom.xml
Clever-note-server/clever-plugin/: pom.xml
Clever-note-server/clever-plugin-api/: pom.xml
Clever-note-server/clever-standalone-server/: pom.xml
Clever-note-server/clever-util/: pom.xml
Clever-note-server/note-api/: pom.xml
Clever-note-server/note-auth/: pom.xml
Clever-note-server/note-comm/: pom.xml
Clever-note-server/note-core/: pom.xml
Clever-note-server/note-domain/: pom.xml
Clever-note-server/note-script/: pom.xml
Clever-note-server/note-space/: pom.xml
Clever-note-server/note-web/: pom.xml
Clever-note-web/: package.json
(+662 files in other folders)
