list_include_file(INC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/inc")
list_source_file(SRC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src")
qt5_create_translation(QM_FILE_LIST ${CMAKE_CURRENT_SOURCE_DIR} ${TS_FILE_LIST})
add_executable(${PROJECT_NAME} ${INC_FILE_LIST} ${SRC_FILE_LIST} ${QM_FILE_LIST})
target_link_libraries(${PROJECT_NAME} PRIVATE c_poet_plugin theme editor richtext)
add_subdirectory(test)
