add_executable(select_wrapper_test select_wrapper.cpp)
target_link_libraries(select_wrapper_test PRIVATE c_poet_database)
add_test(NAME select_wrapper_test COMMAND select_wrapper_test)

add_executable(db_context_holder_test db_context_holder.cpp)
target_link_libraries(db_context_holder_test PRIVATE c_poet_database)
add_test(NAME db_context_holder_test COMMAND db_context_holder_test)

add_executable(sql_executor_test sql_executor.cpp)
target_link_libraries(sql_executor_test PRIVATE c_poet_database)
add_test(NAME sql_executor_test COMMAND sql_executor_test)

add_executable(wrapper_executor_test wrapper_executor.cpp)
target_link_libraries(wrapper_executor_test PRIVATE c_poet_database)
add_test(NAME wrapper_executor_test COMMAND wrapper_executor_test)
